bug(EJ2-5119): Alignment issue fixed for column menu items

--- a/styles/grid/_layout.scss
+++ b/styles/grid/_layout.scss
@@ -1097,10 +1097,6 @@
       padding-top: $grid-checkbox-padding-topbottom;
     }
 
-    .e-checkboxfilter .e-dlg-content {
-      height: 200px;
-    }
-
     .e-excelfilter .e-contextmenu-wrapper,
     .e-excelfilter .e-contextmenu-wrapper ul {
       display: block;
