--- a/styles/grid/_material-definition.scss
+++ b/styles/grid/_material-definition.scss
@@ -162,4 +162,4 @@ $grid-filtered-color: $accent;
 $grid-icon-save: '\e98e';
 $grid-column-menu-sub-menu-box-shadow: 0 8px 10px 0 rgba(0, 0, 0, .24);
 $grid-column-menu-top: 11px;
-$grid-column-menu-top-touch: 16px;
+$grid-column-menu-top-touch: 17px;
